--- a/Out.pod
+++ b/Out.pod
@@ -18,11 +18,11 @@ Time::Out - Easily timeout long running operations
 
 =head1 DESCRIPTION
 
-Time::Out provides an easy interface to I<alarm(2)> based timeouts.
+C<Time::Out> provides an easy interface to I<alarm(2)> based timeouts.
 
 =head2 EXPORT
 
-Time::Out exports 2 symbols, 'timeout' and 'affects'. However, these 
+C<Time::Out> exports 2 symbols, 'timeout' and 'affects'. However, these 
 should only be used according to the syntax shown above.
 
 =head2 RETURN VALUE
@@ -35,6 +35,20 @@ should only be used according to the syntax shown above.
 	return 7 ;
   } ;
   # $rc == 7
+
+
+=head1 C<Time::HiRes>
+
+If C<Time::Out> sees that C<Time::HiRes> has been loaded, it will use 
+that 'alarm' function (if available) instead of the default one, allowing 
+float timeout values to be usedi effectively:
+
+  use Time::Out ;
+  use Time::HiRes ;
+
+  timeout 3.1416 => affects {
+	# ...
+  } ;
 
 
 =head1 BUGS
@@ -58,7 +72,7 @@ specifically passing your @_ (or whatever you want for that matter) to
 
 =head1 SEE ALSO
 
-I<eval>, I<alarm(2)>
+eval, closures, I<alarm(2)>
 
 
 =head1 AUTHOR
