--- a/README
+++ b/README
@@ -1,10 +1,10 @@
 Time::Out - Easy timeouts
 =========================
 
-  use Time::Out ;
+  use Time::Out qw(timeout);
 
   # Time out the following code block after 5 seconds
-  timeout 5 => affects {
+  timeout 5 => sub {
     # do something that might take a long time...
   } ;
   if ($@){
@@ -26,7 +26,7 @@ To install this module type the following:
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2005 Patrick LeBoutillier
+Copyright (C) 2005-2007 Patrick LeBoutillier
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself. 
